--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
                                         <div class="item-inner">
                                             <div class="item-title item-label">Username</div>
                                             <div class="item-input-wrap">
-                                                <input type="text" name="username" placeholder="Your username">
+                                                <input id="uname" type="text" name="username" placeholder="Your username">
                                             </div>
                                         </div>
                                     </li>
@@ -46,7 +46,7 @@
                                         <div class="item-inner">
                                             <div class="item-title item-label">Password</div>
                                             <div class="item-input-wrap">
-                                                <input type="password" name="password" placeholder="Your password">
+                                                <input id="pword" type="password" name="password" placeholder="Your password">
                                             </div>
                                         </div>
                                     </li>
@@ -54,7 +54,7 @@
                             </div>
                             <div class="list">
                                 <ul>
-                                    <li><a class="item-link list-button" href="#">Sign In</a></li>
+                                    <li><a class="item-link list-button" href="#" onclick="signIn()">Sign In</a></li>
                                 </ul>
                                 <div class="block-footer">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
