--- a/platforms/browser/www/login.html
+++ b/platforms/browser/www/login.html
@@ -1,40 +1,38 @@
-<div class="login-screen">
-    <div class="view">
-        <div class="page">
-            <div class="page-content login-screen-content">
-                <div class="login-screen-title">Connect App</div>
-                <form>
-                    <div class="list">
-                        <ul>
-                            <li class="item-content item-input">
-                                <div class="item-inner">
-                                    <div class="item-title item-label">Username</div>
-                                    <div class="item-input-wrap">
-                                        <input type="text" name="username" placeholder="Your username">
-                                    </div>
+<div class="pages">
+    <div class="page" data-page="login">
+        <div class="page-content">
+            <div class="login-screen-title">My App</div>
+            <form>
+                <div class="list">
+                    <ul>
+                        <li class="item-content item-input">
+                            <div class="item-inner">
+                                <div class="item-title item-label">Username</div>
+                                <div class="item-input-wrap">
+                                    <input type="text" name="username" placeholder="Your username">
                                 </div>
-                            </li>
-                            <li class="item-content item-input">
-                                <div class="item-inner">
-                                    <div class="item-title item-label">Password</div>
-                                    <div class="item-input-wrap">
-                                        <input type="password" name="password" placeholder="Your password">
-                                    </div>
+                            </div>
+                        </li>
+                        <li class="item-content item-input">
+                            <div class="item-inner">
+                                <div class="item-title item-label">Password</div>
+                                <div class="item-input-wrap">
+                                    <input type="password" name="password" placeholder="Your password">
                                 </div>
-                            </li>
-                        </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="list">
+                    <ul>
+                        <li><a class="item-link list-button" href="#">Sign In</a></li>
+                    </ul>
+                    <div class="block-footer">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p><a class="back link" href="index.html">Cancel</a></p>
                     </div>
-                    <div class="list">
-                        <ul>
-                            <li><a class="item-link list-button" href="#">Log In</a></li>
-                        </ul>
-                        <div class="block-footer">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <p><a class="link login-screen-close" href="#">Cancel</a></p>
-                        </div>
-                    </div>
-                </form>
-            </div>
+                </div>
+            </form>
         </div>
     </div>
 </div>
