--- a/www/pages/login.html
+++ b/www/pages/login.html
@@ -1,17 +1,34 @@
 <div class="page no-navbar no-toolbar no-swipeback">
     <div class="page-content login-screen-content">
-        <div class="login-screen-title">My App</div>
+        <div class="login-screen-title">Welcome Back!</div>
         <form>
             <div class="list">
-                ...
+                <ul>
+                    <li class="item-content item-input">
+                        <div class="item-inner">
+                            <div class="item-title item-label">Email</div>
+                            <div class="item-input-wrap">
+                                <input id="uname" type="text" name="email" placeholder="Your email">
+                            </div>
+                        </div>
+                    </li>
+                    <li class="item-content item-input">
+                        <div class="item-inner">
+                            <div class="item-title item-label">Password</div>
+                            <div class="item-input-wrap">
+                                <input id="pword" type="password" name="password" placeholder="Your password">
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
             <div class="list">
                 <ul>
-                    <li><a href="#" class="item-link list-button">Sign In</a></li>
+                    <li><a class="item-link list-button" href="#" onclick="signIn()">Sign In</a></li>
                 </ul>
                 <div class="block-footer">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <p><a href="#" class="link back">Close Login Screen</a></p>
+                    <p id="errmsg" style="color: red"></p>
+                    <p><a href="/signup-screen/" class="link">Sign Up</a></p>
                 </div>
             </div>
         </form>
