--- a/www/pages/signup.html
+++ b/www/pages/signup.html
@@ -1,14 +1,14 @@
-<div class="page" data-page="signup">
+<div class="page no-navbar no-toolbar no-swipeback">
     <div class="page-content login-screen-content">
-        <div class="login-screen-title">My App</div>
+        <div class="login-screen-title">Welcome!</div>
         <form>
             <div class="list">
                 <ul>
                     <li class="item-content item-input">
                         <div class="item-inner">
-                            <div class="item-title item-label">Username</div>
+                            <div class="item-title item-label">Email</div>
                             <div class="item-input-wrap">
-                                <input type="text" name="username" placeholder="Your username">
+                                <input id="email" type="text" name="email" placeholder="Your email">
                             </div>
                         </div>
                     </li>
@@ -16,7 +16,7 @@
                         <div class="item-inner">
                             <div class="item-title item-label">Password</div>
                             <div class="item-input-wrap">
-                                <input type="password" name="password" placeholder="Your password">
+                                <input id="newpword" type="password" name="password" placeholder="Your password">
                             </div>
                         </div>
                     </li>
@@ -24,11 +24,11 @@
             </div>
             <div class="list">
                 <ul>
-                    <li><a class="item-link list-button" href="#">Sign In</a></li>
+                    <li><a class="item-link list-button" href="#" onclick="signUp()">Sign Up</a></li>
                 </ul>
                 <div class="block-footer">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <p><a class="back link" href="index.html">Cancel</a></p>
+                    <p id="newerrmsg" style="color: red"></p>
+                    <p><a href="/login-screen/" class="link">Sign In</a></p>
                 </div>
             </div>
         </form>
