--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -139,7 +139,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="pages/chat.html" class="item-link item-content no-chevron">
+                                        <a href="/chat-screen/" class="item-link item-content no-chevron">
                                             <div class="item-inner">
                                                 <div class="item-title-row">
                                                     <div class="item-title">Group Chat 2</div>
