--- a/platforms/ios/www/pages/login.html
+++ b/platforms/ios/www/pages/login.html
@@ -26,7 +26,7 @@
             <div class="block">
                 <div class="block-footer">
                     <a class="link" onclick="signIn()">Sign In</a>
-                    <p id="errmsg" style="color: red"></p>
+                    <p id="errmsg" style="color: red;"></p>
                     <p>New user? <a href="/signup-screen/" class="link">Sign Up</a></p>
                 </div>
             </div>
