--- a/platforms/ios/www/pages/signup.html
+++ b/platforms/ios/www/pages/signup.html
@@ -27,7 +27,7 @@
             <div class="block">
                 <div class="block-footer">
                     <a class="link" onclick="signUp()">Sign Up</a>
-                    <p id="newerrmsg" style="color: red"></p>
+                    <p id="newerrmsg" style="color: red;"></p>
                     <p>Already a user? <a href="/login-screen/" class="link">Sign In</a></p>
                 </div>
             </div>
