added profile page

--- a/platforms/android/app/src/main/assets/www/pages/chat.html
+++ b/platforms/android/app/src/main/assets/www/pages/chat.html
@@ -1,18 +1,6 @@
 <div class="page" data-page="chat">
     <div class="panel panel-right panel-reveal panel-resizable">
             <div class="list no-hairlines">
-                <ul>
-                    <a href="#" class="panel-close item-link no-chevron">
-                        <li class="item-content">
-                            <div class="item-media"><i class="material-icons">unsubscribe</i></div>
-                            <div class="item-inner">Leave Group</div>
-                        </li>
-                    </a>
-                   
-                </ul>
-            </div>
-                    <div class="hairline"></div>
-            <div class="list no-hairlines">
                 <div class="list-title">Members</div>
                     <ul>
                     <a href="#" class="item-link no-chevron">
@@ -30,6 +18,8 @@
                    
                 </ul>
             </div>
+        <div class="hairline"></div>
+        <div class="row justify-content-center" style="margin: 16px"><a class="link panel-close text-align-center">Leave Group</a></div>
         </div>
   <div class="navbar">
     <div class="navbar-inner">
